{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "b8592738-b24e-4fbf-89e8-85531c118bc3",
            "actions": [
                {
                    "name": "MovementForward",
                    "type": "Value",
                    "id": "32551604-e961-4d92-9580-cf441b031096",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementRotation",
                    "type": "Button",
                    "id": "ab08b589-0f05-4169-8f24-d626a576411a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0d06b84e-4b29-4bc0-a52a-054605fd0d37",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Rotation",
                    "id": "e4490771-249a-4da9-a969-6956803d34fd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c3bd98f0-c5b5-4b62-a3fb-8003d2511632",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bf4665bf-bcc9-42d0-b1e2-af14efddefab",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}